# linux-webrtc-reference-for-amazon-kinesis-video-streams

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  GstMasterExample.cmake  MasterExample.cmake  README.md  test.txt  uncrustify.cfg
.devcontainer/: devcontainer.json
.github/workflows/: README.md  ci.yml  codeql-analysis.yml  codeql-analysis.yml_needs_public_repo  formatter.yml  formatting.yml  temp-formatter.yml  ubuntu-24.04-build-smoke-test-x86-64.yml  ubuntu-24.04-build-test-iot-creds-x86-64.yml  uncrustify.yml  yocto-build-test-iot-creds.yml
.yocto/: README.md
.yocto/conf/: layer.conf
.yocto/recipes-sdk/amazon-kvs-webrtc-sdk-c/: amazon-kvs-webrtc-sdk-c_git.bb
.yocto/recipes-sdk/amazon-kvs-webrtc-sdk-c/files/: run-ptest
.yocto/scripts/: init-yocto-build.sh  start-qemu.sh  start-yocto-build.sh
CMake/: GstMasterExample.cmake  MasterExample.cmake  ViewerExample.cmake  coreJSON.cmake  dcep.cmake  ice.cmake  libsrtp.cmake  libusrsctp.cmake  libwebsockets.cmake  mbedtls.cmake  rtcp.cmake  rtp.cmake  sdp.cmake  sigV4.cmake  signaling.cmake  stun.cmake
configs/mbedtls/: mbedtls_custom_config.h
configs/sigv4/: sigv4_config.h
examples/app_common/: app_common.c  app_common.h
examples/app_media_source/: app_mdeia_source.c  app_media_source.c  app_media_source.h  app_media_source_port.c  app_media_source_port.h
examples/app_media_source/samples/opusSampleFrames/: sample-111.opus  sample-229.opus  sample-348.opus  sample-481.opus
examples/base64/: base64.c  base64.h
examples/base64/custom/: base64_custom.c
examples/base64/mbedtls/: base64_mbedtls.c
examples/common/: common.c
examples/demo_config/: demo_config_template.h
examples/gst_master/: demo_data_types.h  demo_gst_master_data_types.h  gst_master.c  gst_master.cmake  main.c
examples/gst_media_source/: gst_media_source.c  gst_media_source.h
examples/https/: https.h
examples/https/httpsLibwebsockets/: httpsLibwebsockets.c  httpsLibwebsockets.h
examples/ice_controller/: ice_controller.c  ice_controller.h  ice_controller_data_types.h  ice_controller_net.c  ice_controller_private.h  ice_controller_socket_listener.c
examples/libsrtp/: config.h
examples/libusrsctp/: sctp_utils.c  sctp_utils.h
examples/logging/: logging.c  logging.h
examples/master/: demo_config.h  demo_config_template.h  demo_data_types.h  demo_main_data_types.h  demo_sdp_utils.c  main.c  master.c  mbedtls_custom_config.h
examples/message_queue/linux/: message_queue.c  message_queue.h
examples/metric/: metric.c  metric.h
examples/network_transport/: mbedtls_bio_tcp_sockets_wrapper.c  mbedtls_bio_tcp_sockets_wrapper.h  mbedtls_bio_udp_sockets_wrapper.c  mbedtls_bio_udp_sockets_wrapper.h  transport_dtls_mbedtls.c  transport_dtls_mbedtls.h  transport_dtls_mbedtls_port.c  transport_dtls_mbedtls_port.h  transport_interface.h  transport_mbedtls.c  transport_mbedtls.h
examples/network_transport/tcp_sockets_wrapper/include/: tcp_sockets_wrapper.h
examples/network_transport/tcp_sockets_wrapper/ports/posix/: tcp_sockets_wrapper.c
examples/network_transport/udp_sockets_wrapper/include/: udp_sockets_wrapper.h
examples/network_transport/udp_sockets_wrapper/ports/posix/: udp_sockets_wrapper.c
examples/networking/: http.h  networking.c  networking.h  ring_buffer.c  ring_buffer.h  websocket.h
examples/networking/networkingLibwebsockets/: networkingLibwebsockets.c  networkingLibwebsockets.h  networkingLibwebsockets_http.c  networkingLibwebsockets_private.h  networkingLibwebsockets_websocket.c
examples/networking/networking_utils/: configure_lws_logging.c  networking_utils.c  networking_utils.h
examples/peer_connection/: peer_connection.c  peer_connection.h  peer_connection_data_types.h  peer_connection_jitter_buffer.c  peer_connection_jitter_buffer.h  peer_connection_rolling_buffer.c  peer_connection_rolling_buffer.h  peer_connection_sctp.c  peer_connection_sctp.h  peer_connection_sdp.c  peer_connection_sdp.h  peer_connection_srtcp.c  peer_connection_srtcp.h  peer_connection_srtp.c  peer_connection_srtp.h  transceiver_data_types.h
examples/peer_connection/peer_connection_codec_helper/: peer_connection_g711_helper.c  peer_connection_g711_helper.h  peer_connection_h264_helper.c  peer_connection_h264_helper.h  peer_connection_h265_helper.c  peer_connection_h265_helper.h  peer_connection_opus_helper.c  peer_connection_opus_helper.h
examples/peer_connection/peer_connection_codec_helper/include/: peer_connection_codec_helper.h
examples/sdp_controller/: sdp_config.h  sdp_controller.c  sdp_controller.h  sdp_controller_data_types.h
examples/signaling_controller/: signaling_controller.c  signaling_controller.h  signaling_controller_data_types.h
examples/string_utils/: string_utils.c  string_utils.h
examples/timer_controller/: timer_controller.c  timer_controller.h
examples/viewer/: viewer.c
misc/buildtestcontainer/: Containerfile
test/coverity/: CMakeLists.txt  GetFilePath.cmake  README.md
test/sanitizer_suppression/: README.md  thread_sanitizer_suppressions.txt
tests/iot-credentials/: create-iot-credentials.sh  destroy-iot-credentials.sh
